--- a/.env
+++ b/.env
@@ -1,6 +1,12 @@
-DB_HOST=localhost
-DB_USER=root
-DB_PASSWORD=12345678
-DB_NAME=gdgoc_sla
-JWT_SECRET=your_secret_key_here
-PORT=5000
+# DB_HOST=localhost
+# DB_USER=root
+# DB_PASSWORD=12345678
+# DB_NAME=gdgoc_sla
+# JWT_SECRET=your_secret_key_here
+# PORT=5000
+
+DB_USER=u951289607_azril
+DB_HOST=srv594.hstgr.io
+DB_NAME=u951289607_functionality
+DB_PASSWORD="sAee94[Rg"
+DB_PORT=3306
